--- a/html pages/volunteerRes.html
+++ b/html pages/volunteerRes.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="/images/main_fav_cir.png" type="image/x-icon">
     <script src="/source code/volunteerRes.js"></script>
+    <script src="https://apis.google.com/js/api.js"></script>
     <title>Give Help</title>
       </head>
 
