--- a/html pages/giveHelp.html
+++ b/html pages/giveHelp.html
@@ -33,7 +33,7 @@
       <div id="giveResource"  class="giveResource">
         <h1><a href="/html pages/pinConfirm.html">Report a Hot Zone</a></h1>
         <h4>If you are in an area where there are lots of unhoused persons.  Click button to drop your coordinates.</h4>
-        <button type="button" id="dropLocPin" class="dropLocPin"><a href="http://www.geoplugin.net/javascript.gp">Drop A Pin</button></a>
+        <button type="button" id="dropLocPin" class="dropLocPin" onclick="getLocation()">Drop A Pin</button></a>
       </div>
       <div id="giveResource" class="giveResource">
         <h4>Homelessness is a worldwide problem.  Monetary contributions are greatly appreciated.</h4>
