--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h1><a href="/html pages/selectRes.html">I Need Help</a></h1>
     </div>
     <div id="mainResource" class="mainResource">
-      <h1><a href="/html pages/giveHelp.html">I Want to Help</a></h1>
+      <h1><a href="/html pages/volunteerRes.html">I Want to Help</a></h1>
     </div>
   </div>   
 
