--- a/html pages/giveHelp.html
+++ b/html pages/giveHelp.html
@@ -9,7 +9,7 @@
     <meta http-equiv='pragma' content='no-cache'>
     <link rel="stylesheet" href="/stylesheets/mainStyle.css">
     <link rel="icon" href="/images/main_fav_cir.png" type="image/x-icon">
-    <script src="/source code/giveHelp.js"></script>
+    <script src="/source code/volunteerRes.js"></script>
     <script src="https://apis.google.com/js/api.js"></script>
     <title>Give Help</title>
       </head>
