food zip resource api

--- a/html pages/foodRes.html
+++ b/html pages/foodRes.html
@@ -35,7 +35,7 @@
               <div id="myLinks" class="myLinks">
                   <a href="/index.html">Home |</a>
                   <a href="/html pages/resOpt.html">Shelter |</a>
-                  <a href="/html pages/foodRes.html">Food |</a>
+                  <a href="/html pages/foodzip.html">Food |</a>
                   <a href="/html pages/healthRes.html">Medical |</a>
                   <a href="/html pages/employRes.html">Jobs |</a>
                   <a href="/html pages/volunteerRes.html">Volunteer|</a>
