--- a/html pages/selectRes.html
+++ b/html pages/selectRes.html
@@ -53,7 +53,7 @@
         <h1><a href="/html pages/resOpt.html">Shelter</a></h1>
       </div>
     <div id="resourceList"  class="resourceList">
-      <h1><a href="/html pages/foodRes.html">Food</a></h1>
+      <h1><a href="/html pages/foodzip.html">Food</a></h1>
     </div>
     <div id="resourceList"  class="resourceList">
       <h1><a href="/html pages/healthRes.html">Medical</a></h1>
